--- a/BuoySensorManager.Web/Pages/Index.razor
+++ b/BuoySensorManager.Web/Pages/Index.razor
@@ -1,9 +1,4 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<PageTitle>Buoy Sensor Mark II</PageTitle>
+<h1>Buoy Sensor Mark II</h1>
