--- a/BuoySensorManager.Web/_Imports.razor
+++ b/BuoySensorManager.Web/_Imports.razor
@@ -9,4 +9,4 @@
 @using BuoySensorManager.Web
 @using BuoySensorManager.Web.Shared
 @using BuoySensorManager.Services
-@using BuoySensorManager.Services.Publishers
+@using BuoySensorManager.Services.Dispatchers
